# semantic-image-research

./: .gitignore  main.py  pyproject.toml  requirements.txt  versions.py
semantic_image_search/notebooks/: experiments.ipynb
